<resources>
    <string name="app_name">InClass 2b</string>
    <string name="action_settings">Settings</string>
    <string name="UTC">UTC</string>
    <string name="PM">PM</string>
    <string name="AMPM">AM/PM</string>
    <string name="Previous_day">Previous Day</string>
    <string name="EST">Eastern Standard Time (EST)</string>
    <string name="CST">Central Standard Time (CST)</string>
    <string name="MST">Mountain Standard Time (MST)</string>
    <string name="PST">Pacific Standard Time (PST)</string>
    <string name="clear">Clear All</string>
    <string name="convert">Convert</string>
</resources>
