<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.myapplication10.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#faf8f8">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EST"
            android:id="@+id/radioButton1"
            android:checked="true" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CST"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MST"
            android:id="@+id/radioButton3"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PST"
            android:id="@+id/radioButton4"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/radioButton5"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/button"
        android:onClick="ConvertPressed"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UTC"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/EditText1"
        android:layout_alignBottom="@+id/EditText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/EditText1"
        android:hint="Hours"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/EditText2"
        android:hint="Minutes"
        android:layout_alignTop="@+id/EditText1"
        android:layout_toRightOf="@+id/EditText1"
        android:layout_toEndOf="@+id/EditText1" />

    <EditText
        android:layout_width="70dp
        "
        android:layout_height="50dp
        "
        android:text="@string/PM"
        android:id="@+id/editText3"
        android:layout_toRightOf="@+id/EditText2"
        android:layout_toEndOf="@+id/EditText2"
        android:layout_alignBottom="@+id/EditText2"
        android:layout_alignTop="@+id/EditText2"
        android:inputType="none" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AMPM"
        android:id="@+id/switch1"
        android:layout_below="@+id/EditText1"
        android:layout_alignLeft="@+id/EditText1"
        android:layout_alignStart="@+id/EditText1"
        android:checked="true" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:id="@+id/prevdaytv"
        android:layout_alignBottom="@+id/resultText"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup"
        android:text="@string/Previous_day"
        android:textColor="#f10909"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="Result:"
        android:layout_below="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/switch1"
        android:layout_toStartOf="@+id/switch1" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"

        android:layout_alignBottom="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/editText" />


</RelativeLayout>
